[gd_scene load_steps=8 format=3 uid="uid://l8i46gi6a1nt"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_kby66"]
[ext_resource type="FontFile" uid="uid://b4xapu2xuors3" path="res://assets/theme/fonts/ui.ttf" id="1_lgtxk"]
[ext_resource type="PackedScene" uid="uid://cjigda7m1bnsp" path="res://scenes/ui/main_menu_display.tscn" id="2_b2oay"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spbn5"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.28485, 0.28485, 0.28485, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wj0f2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.20871, 0.20871, 0.20871, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4j4h8"]
bg_color = Color(0.114897, 0.114897, 0.114897, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.273873, 0.273873, 0.273872, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_ls1be"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/font_sizes/font_size = 36
Button/fonts/font = ExtResource("1_lgtxk")
Button/styles/hover = SubResource("StyleBoxFlat_spbn5")
Button/styles/normal = SubResource("StyleBoxFlat_wj0f2")
Button/styles/pressed = SubResource("StyleBoxFlat_4j4h8")
Label/font_sizes/font_size = 80
Label/fonts/font = ExtResource("1_lgtxk")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kby66")

[node name="MainMenuDisplay" parent="." instance=ExtResource("2_b2oay")]

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ls1be")
theme_override_constants/separation = 8
alignment = 1

[node name="Title" type="Label" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
text = "1000-Rooms"

[node name="Spacer" type="MarginContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 50

[node name="Start" type="Button" parent="Container"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="Options" type="Button" parent="Container"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="Secrets" type="Button" parent="Container"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Secrets"

[node name="Quit" type="Button" parent="Container"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="Container/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Container/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Container/Secrets" to="." method="_on_secrets_pressed"]
[connection signal="pressed" from="Container/Quit" to="." method="_on_quit_pressed"]
